feat: bug fixing- calendar price view